homelab/k8s/prometheus-stack/prometheus-stack-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-stack-ing
  namespace: monitoring
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
  labels:
    name: prometheus-stack-ing
spec:
  rules:
  - host: grafana.demos.kubiya.ai #Use your own domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-grafana 
            port: 
              number: 80
  - host: pro.demos.kubiya.ai #Use your own domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-operated 
            port: 
              number: 9090
